# xbrz-cli

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: main.rs
